# Qt-Study

QML_Project_Template/: .gitignore
TeslaSpeedometerUI/: CMakeLists.txt  ControlButtonsWidget.cpp  ControlButtonsWidget.h  ControlButtonsWidget.ui  main.cpp
qt6-ep8/: CMakeLists.txt
qt6-ep8/include/: test.h
qt6-ep8/src/: main.cpp  test.cpp
qt6-ep9/: CMakeLists.txt
qt6-ep9/src/: main.cpp
qt6_e28/: CMakeLists.txt
qt6_ep15/: CMakeLists.txt
qt6_ep15/include/: kitten.h
qt6_ep15/src/: kitten.cpp  main.cpp
qt6_ep3/: CMakeLists.txt  main.cpp
qt6_ep3/include/: test.h
qt6_ep3/src/: test.cpp
qt6_ep4/src/: test.cpp
qt6_ep5/: .gitignore  CMakeLists.txt
qt6_ep5/include/: test.h
qt6_ep5/src/: main.cpp
qt6_threads/: CMakeLists.txt  main.cpp
qt6_threads/include/: Worker.h
qt6_threads/src/: Worker.cpp
simple_speedometer/: CMakeLists.txt  main.cpp
simple_speedometer/include/: Car.h  CarInfo.h
simple_speedometer/src/: Car.cpp  CarInfo.cpp
simple_speedometer/ui/: CarInfo.ui
speedometer/: CMakeLists.txt  main.cpp
speedometer/include/: ControlButtonsWidget.h  IndicatorWidget.h  Speedometer.h  SpeedometerWidget.h
speedometer/src/: ControlButtonsWidget.cpp  IndicatorWidget.cpp  SpeedometerWidget.cpp
speedometer/ui/: ControlButtonsWidget.ui  IndicatorWidget.ui  SpeedometerWidget.ui
tesla_speedometer/: CMakeLists.txt  main.cpp
tesla_speedometer/include/: Car.h  ControlButtonWidget.h  IndicatorWidget.h  Speedometer.h  SpeedometerWidget.h
tesla_speedometer/src/: Car.cpp  ControlButtonWidget.cpp  IndicatorWidget.cpp  Speedometer.cpp  SpeedometerWidget.cpp
tesla_speedometer/ui/: ControlButtonWidget.ui  IndicatorWidget.ui  SpeedometerWidget.ui
